--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,9 +4,9 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: Contract
-    network: poa-core
+    network: mainnet
     source:
-      address: "0x06012c8cf97BEaD5deAe237070F9587f8E7A266d"
+      address: "0xC7eA7cD307305cAF4B97F3D739456B47fF5C1420"
       abi: Contract
     mapping:
       kind: ethereum/events
